infrastructure/gpu-operator/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: gpu-operator
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: gpu-operator
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gpu-operator-ingress
  namespace: gpu-operator
spec:
  endpointSelector:
    matchLabels:
      app: gpu-operator
      app.kubernetes.io/component: gpu-operator
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: nvidia-dcgm-exporter-ingress
  namespace: gpu-operator
spec:
  endpointSelector:
    matchLabels:
      app: nvidia-dcgm-exporter
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "9400"
              protocol: TCP
